<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.peenyaindustries.piaconnect.activity.About.OfficeBearers">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/primary"
            android:elevation="6dp"
            android:minHeight="?attr/actionBarSize"
            tools:targetApi="lollipop" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <android.support.v7.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/krishnamurthy_r" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_gravity="bottom"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_name_1"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_designation_1"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_mobile_1"
                            android:textAlignment="center" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/jayaramu" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="bottom"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_name_2"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_designation_2"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_mobile_2"
                            android:textAlignment="center" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/malayadri_reddy" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="bottom"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_name_3"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_designation_3"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_mobile_3"
                            android:textAlignment="center" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/prakash_c" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="bottom"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_name_4"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_designation_4"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_mobile_4"
                            android:textAlignment="center" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ravi_prakash" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="bottom"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_name_5"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_designation_5"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_mobile_5"
                            android:textAlignment="center" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/arun_kumar" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="bottom"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_name_6"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_designation_6"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_mobile_6"
                            android:textAlignment="center" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/kantharaju_s" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_name_7"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_designation_7"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/o_mobile_7"
                            android:textAlignment="center" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
